<resources>
    <string name="app_name">UserPerformanceRating</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_user">User</string>
    <string name="login_text">Login Page</string>
    <string name="signup_text">Signup Page</string>
    <string name="usename_text">User Name</string>
    <string name="name_text">Name</string>
    <string name="password_text">Password</string>
    <string name="attempts_text">Attempts :</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_logout">Logout</string>
    <string name="Secon_page_text">Welocome to the Second Page</string>


    <string name="user_nam_hint">username</string>
    <string name="user_pass_hint">userpass</string>
    <string name="user_desig_hint">designation</string>

</resources>
