<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="@dimen/login_sigup_padding"
    android:background="@color/loginBackground"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signup_text"
        android:id="@+id/textView_signup"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"

        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/usename_text"
        android:textColor="@android:color/white"
        android:id="@+id/textView_username"
        android:layout_marginTop="@dimen/sigin_username_marginTop"
        android:layout_below="@+id/textView_login"
        android:layout_alignRight="@+id/textView_login"
        android:layout_alignEnd="@+id/textView_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password_text"
        android:textColor="@android:color/white"
        android:id="@+id/textView_password"
        android:layout_below="@+id/editText_user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Designation"
        android:textColor="@android:color/white"
        android:id="@+id/textView_designation"
        android:layout_below="@+id/editText_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:maxLength="20"
        android:text="user"
        android:hint="@string/user_nam_hint"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:id="@+id/editText_user"
        android:layout_alignTop="@+id/textView_username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:maxLength="15"
        android:textColor="@android:color/white"
        android:text="pass"
        android:hint="@string/user_pass_hint"
        android:backgroundTint="@android:color/white"
        android:id="@+id/editText_password"
        android:layout_below="@+id/editText_user"
        android:layout_alignLeft="@+id/editText_user"
        android:layout_alignStart="@+id/editText_user" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@android:color/white"
        android:text=""
        android:maxLength="30"
        android:hint="@string/user_desig_hint"
        android:backgroundTint="@android:color/white"
        android:id="@+id/editText_designation"
        android:layout_below="@+id/editText_password"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignStart="@+id/editText_password" />



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_attemt_Count"
        android:layout_alignBottom="@+id/editText_password"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignStart="@+id/editText_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/editText_password"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignStart="@+id/editText_password"
        android:layout_marginTop="@dimen/signup_button_lyout_marginTop"
        android:orientation="horizontal"
        android:layout_height="@dimen/login_button_lyout_height">


        <TextView
            android:layout_width="@dimen/login_button_width"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_button_text"
            android:background="@drawable/button_background"
            android:text="@string/button_signup"
            android:textColor="@android:color/white"
            android:id="@+id/button_signup"
            />



    </LinearLayout>


</RelativeLayout>